# Trustworthy-Assessment-of-Pain-from-AudioSpeech

./: .gitignore  SHA256SUMS.txt  data_dictionary.html  data_dictionary.md  pyproject.toml  readme.html  readme.md  trails.ipynb
Annotations/: Audible_Breath.csv  Audio_Cut_Out.csv  External_Disturbances.csv  No_Assigned_Sentence.csv  No_Pain_Rating.csv  No_Pain_Rating_Given_So_Copied.csv  Speech_Errors_and_Disturbances.csv
silent_patient/: README.md
silent_patient/app/: streamlit_app.py
silent_patient/kb/: pain_protocols.md
silent_patient/scripts/: export.py  train.py
silent_patient/src/silent_patient/: bundle.py  config.py  data.py  features.py  model.py  rag.py  train_utils.py  wav2vec2.py
silent_patient/src/silent_patient/scripts/: __init__.py  train.py  train_wav2vec2.py
silent_patient/tests/: test_data_join.py  test_features.py
